--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/cfe84/kb-tools#readme",
   "dependencies": {
     "handlebars": "^4.7.3",
+    "parse5": "^5.1.1",
     "yaclip": "^1.1.1"
   }
 }
