--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cfe84/kb-tools#readme",
   "dependencies": {
+    "csv-parse": "^4.8.5",
     "handlebars": "^4.7.3",
     "parse5": "^5.1.1",
     "yaclip": "^1.1.1"
