Better structure, help

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cfe84/kb-tools#readme",
   "dependencies": {
+    "command-line-usage": "^6.1.0",
     "csv-parse": "^4.8.5",
     "handlebars": "^4.7.3",
     "parse5": "^5.1.1",
