--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "Tools for knowledge base",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "test": {
+      "patterns": [
+        "src",
+        "test"
+      ],
+      "extensions": "js"
+    }
   },
   "repository": {
     "type": "git",
@@ -25,5 +35,9 @@
     "handlebars": "^4.7.3",
     "parse5": "^5.1.1",
     "yaclip": "^1.1.1"
+  },
+  "devDependencies": {
+    "mocha": "^7.1.0",
+    "npm-watch": "^0.6.0"
   }
 }
